2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (hd_plugin_info_free,
	  hd_applet_manager_init): Do not leak plugin infos. Fixes: NB#102295
	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_append_backgrounds): Do not leak
	  strings from key file. Fixes: NB#102298
	* src/hd-incoming-events.c (load_notification_groups): Do not leak
	  key_file and groups_file in error cases. Fixes: NB#102302
	* src/hd-notification-manager.c (hd_notification_manager_call_action,
	  hd_notification_manager_call_dbus_callback): Do not leak D-Bus
	  messages. Fixes: NB#102304
	* src/hd-task-manager.c (hd_task_manager_load_desktop_file): Do not
	  leak desktop_id. Fixes: NB#102296

2009-02-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Fix
	missing error argument (Coverity). Fixes: NB#102259

2009-02-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Use the hildon-desktop AppMgr interface to launch applications. Fixes:
	NB#90450

	* src/hd-task-manager.c (hd_task_manager_dispose): Unref D-Bus AppMgr
	  proxy.
	  (hd_task_manager_get_app_mgr_proxy): Connects to D-Bus AppMgr proxy.
	  (hd_task_manager_launch_task): Use AppMgr to launch the task.

2009-02-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog:
	* debian/rules: Start hildon-home as #20 instead of #22. Fixes:
	NB#101216

2009-02-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-events.c (group_update): Fix extended notifications
	support in task switcher notifications. Fixes: NB#99742

2009-02-13  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_expose_event):
	Paint the frame in front of the thumbnail.

2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.12
	* configure.ac: 0.3.12

2009-02-13  Jan Arne Petersen  <jpetersen@openismus.com>
